--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "overrides": {
       "bigint-buffer": "npm:@gsknnft/bigint-buffer@1.3.2",
       "esbuild@<=0.24.2": ">=0.25.0",
-      "semver@>=7.0.0 <7.5.2": ">=7.5.2"
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "jws@<3.2.3": ">=3.2.3",
+      "systeminformation@<5.27.14": ">=5.27.14"
     },
     "onlyBuiltDependencies": [
       "@gsknnft/bigint-buffer",
